Added skeleton check-in button

--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -6,4 +6,9 @@
 
 <ion-content>
 	<div #map id="map"></div>
+	<div text-center id="check-in-button">
+		<button ion-button color="primary" large round (click)="checkIn()">
+			Check In
+		</button>
+	</div>
 </ion-content>
