--- a/src/pages/setup/gym/gym.html
+++ b/src/pages/setup/gym/gym.html
@@ -1,6 +1,24 @@
-<div [ngStyle]="{display: displayMap}" #map id="map"></div>
-<ion-list>
-	<ion-item>
-		<ion-input (click)="showAddressModal()" [(ngModel)]="address.description" type="text" disabled="true" placeholder="Enter address"></ion-input>
-	</ion-item>
-</ion-list>
+<ion-header no-shadow>
+	<ion-navbar>
+		<ion-title>Choose Gym</ion-title>
+	</ion-navbar>
+</ion-header>
+
+
+<ion-content no-bounce>
+	<div #map id="map"></div>
+	<ion-list>
+		<ion-item>
+			<ion-input (click)="showAddressModal()" [(ngModel)]="address.description" type="text" disabled="true" placeholder="Enter address"></ion-input>
+		</ion-item>
+	</ion-list>
+</ion-content>
+
+<ion-footer>
+	<ion-toolbar>
+		<button ion-button icon-right (click)="pushPage()">
+			Next
+			<ion-icon name="arrow-forward"></ion-icon>
+		</button>
+	</ion-toolbar>
+</ion-footer>
