--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -14,6 +14,11 @@
 			</ion-item>
 
 			<ion-item>
+				<ion-label floating>Email</ion-label>
+				<ion-input type="text" [(ngModel)]="account.email" name="email"></ion-input>
+			</ion-item>
+
+			<ion-item>
 				<ion-label floating>{{ 'PASSWORD' }}</ion-label>
 				<ion-input type="password" [(ngModel)]="account.password" name="password"></ion-input>
 			</ion-item>
